--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "ts-node-dev index.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
